fix accordian items being white background in dark mode

--- a/src/css/darkmodemaths.css
+++ b/src/css/darkmodemaths.css
@@ -23,6 +23,7 @@
 
     --colours-regular-background: #2f2f2c;
     --colours-item-hover: #3b3b37;
+    --colours-item: #2f2f2c;
 
     --colours-question-background: #2f2f2c;
     --question-text-colour: var(--palette-light-grey) !important;
